--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>Chat app</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Chat app using sockets</h1>
-
-    <input type="text" id="newmsg">
-    <button id="btn">Send</button>
+    <input type="text" id="roomId" placeholder="room id.." />
+    <input type="text" id="username" placeholder="user id.." />
+    <input type="text" id="newmsg" placeholder="message.." />
+    <button id="btn" class="btn btn-primary">Send</button>
 
     <ul id="msglist"></ul>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
